Start of better load and discharge timings